force-app/main/default/objects/Timesheet__c/Timesheet__c.object-meta.xml
<CustomObject>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>TN-{00000}</displayFormat>
        <label>Timesheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>