force-app/main/default/objects/Timesheet__c/fields/Actual_Status__c.field-meta.xml
<CustomField>
    <fullName>Actual_Status__c</fullName>
    <label>Actual Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>Absent</fullName>
            </value>
            <value>
                <fullName>Half Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>