force-app/main/default/objects/Timesheet__c/fields/HR_Approval__c.field-meta.xml
<CustomField>
    <fullName>HR_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HR Approval</label>
    <type>Checkbox</type>
</CustomField>