force-app/main/default/objects/Timesheet__c/fields/Punch_IN_Time__c.field-meta.xml
<CustomField>
    <fullName>Punch_IN_Time__c</fullName>
    <label>Punch IN Time</label>
    <type>Time</type>
</CustomField>