force-app/main/default/objects/Timesheet__c/fields/Punch_OUT_Time__c.field-meta.xml
<CustomField>
    <fullName>Punch_OUT_Time__c</fullName>
    <label>Punch OUT Time</label>
    <type>Time</type>
</CustomField>