force-app/main/default/objects/Timesheet__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>