force-app/main/default/objects/Timesheet__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Manager Review</fullName>
            </value>
            <value>
                <fullName>Manager Approved</fullName>
            </value>
            <value>
                <fullName>Manager Rejected</fullName>
            </value>
            <value>
                <fullName>HR Review</fullName>
            </value>
            <value>
                <fullName>HR Approved</fullName>
            </value>
            <value>
                <fullName>HR Rejected</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>