force-app/main/default/objects/Timesheet__c/fields/Timesheet_Period__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Period__c</fullName>
    <label>Timesheet Period</label>
    <type>Date</type>
</CustomField>