force-app/main/default/objects/Timesheet__c/fields/Total_Hours_worked_in_a_month__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_worked_in_a_month__c</fullName>
    <label>Total Hours worked in a month.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>