force-app/main/default/objects/Timesheet__c/fields/Total_Hours_Worked_per_day__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Worked_per_day__c</fullName>
    <label>Total Hours Worked per day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>